src/testData/analysis/noConstantsInEnum.cr
enum <error descr="Enum must have at least one constant">A</error>

end

enum <error descr="Enum must have at least one constant">B</error>
  def foo

  end
end

enum C
  X
  Y
  Z
end